<resources>
    <string name="app_name" translatable="false">ProgramTech</string>
    <string name="account" translatable="false">Личный Аккаунт</string>
    <string name="products_text" translatable="false">Продукты</string>
    <string name="recipe_text" translatable="false">Рецепты</string>
    <string name="note_text" translatable="false">Заметки</string>
    <string name="products_name">Продукты</string>
    <string name="milk">Молоко</string>
    <string name="date">12.12.2012</string>
    <string name="count">12</string>
    <string name="product_setting">Настройка</string>
    <string name="recipe_omelet">Ингредиенты: \n - 2 яйца \n - 50 мл молока \n - Соль и перец по вкусу\n\n Инструкции: \n1. Взбейте яйца с молоком, солью и перцем. \n2. Нагрейте сковороду и влейте смесь. \n3. Готовьте на среднем огне до готовности.</string>
    <string name="recipe_salad">Ингредиенты: \n - 100 г салата \n - 1 огурец \n - 2 помидора \n - 50 г сыра\n\n Инструкции: \n1. Нарежьте все овощи и сыр. \n2. Смешайте все ингредиенты в миске. \n3. Заправьте оливковым маслом и перемешайте.</string>
    <string name="recipe_steak">Ингредиенты: \n - 200 г говяжьего стейка \n - Соль и перец по вкусу \n - 1 ст. л. растительного масла\n\n Инструкции: \n1. Натрите стейк солью и перцем. \n2. Нагрейте сковороду и добавьте масло. \n3. Обжарьте стейк до желаемой степени готовности с каждой стороны.</string>
</resources>