<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/MainBgColor">



        <LinearLayout
            android:id="@+id/product_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:background="@color/Gay"
            >


            <ImageView
                android:id="@+id/product_img"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/milk"
                app:srcCompat="@drawable/milk" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_margin="10dp"
                android:text="@string/milk" />

            <TextView
                android:id="@+id/product_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_margin="10dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/product_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_margin="10dp"
                android:text="@string/count" />

            <ImageButton
                android:id="@+id/product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/product_setting"
                app:srcCompat="@drawable/baseline_dehaze_24" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>